table view collapse on click still got buggy on clicking certain area

--- a/myApp1/www/css/style.css
+++ b/myApp1/www/css/style.css
@@ -927,32 +927,27 @@ table.tableInfolist tr td:first-child {
 
 .tableInfo-desc {
     left: 0;
-    bottom: 2px;
-    width: 100%;
+  
     text-align: center;
     color: white;
-    z-index: 0;
+  
     position: absolute;
     background-color: rgba(10,10,10,0.6);
     font-size: 2.5vmin;
     font-weight: bold;
-    line-height: 3vmin;
-    min-height: 5vmin;
+  
+ 
     border-radius: 0.5vmin;
 }
 
 .tableInfo-capacity {
-    bottom: 0px;
-    width: 30%;
+    bottom: 3px;
     text-align: center;
     color: white;
-    z-index: 0;
     position: absolute;
     background-color: transparent;
     font-size: 2.5vmin;
     font-weight: bold;
-    line-height: 3vmin;
-    height: 4vmin;
     margin: 0 auto;
     left: 0;
     right: 0;
